@@ -34,7 +34,7 @@ import static io.prestosql.spi.type.Decimals.isLongDecimal;
 import static io.prestosql.spi.type.Decimals.isShortDecimal;
 import static io.prestosql.spi.type.DoubleType.DOUBLE;
 import static io.prestosql.spi.type.IntegerType.INTEGER;
-import static io.prestosql.spi.type.TimestampType.TIMESTAMP;
+import static io.prestosql.spi.type.TimestampType.TIMESTAMP_MILLIS;
 import static io.prestosql.spi.type.TimestampWithTimeZoneType.TIMESTAMP_WITH_TIME_ZONE;
 import static io.prestosql.spi.type.VarbinaryType.VARBINARY;
 import static io.prestosql.spi.type.VarcharType.VARCHAR;
@@ -49,7 +49,7 @@ public class InMemoryRecordSet
 
     public InMemoryRecordSet(Collection<? extends Type> types, Iterable<? extends List<?>> records)
     {
-        this.types = Collections.unmodifiableList(new ArrayList<>(types));
+        this.types = List.copyOf(types);
         this.records = records;
     }
 
@@ -200,8 +200,7 @@ public class InMemoryRecordSet
 
         private Builder(Collection<Type> types)
         {
-            requireNonNull(types, "types is null");
-            this.types = Collections.unmodifiableList(new ArrayList<>(types));
+            this.types = List.copyOf(requireNonNull(types, "types is null"));
             checkArgument(!this.types.isEmpty(), "types is empty");
         }
 
@@ -222,7 +221,7 @@ public class InMemoryRecordSet
                 else if (INTEGER.equals(type)) {
                     checkArgument(value instanceof Integer, "Expected value %s to be an instance of Integer, but is a %s", i, value.getClass().getSimpleName());
                 }
-                else if (BIGINT.equals(type) || DATE.equals(type) || TIMESTAMP.equals(type) || TIMESTAMP_WITH_TIME_ZONE.equals(type)) {
+                else if (BIGINT.equals(type) || DATE.equals(type) || TIMESTAMP_MILLIS.equals(type) || TIMESTAMP_WITH_TIME_ZONE.equals(type)) {
                     checkArgument(value instanceof Integer || value instanceof Long,
                             "Expected value %d to be an instance of Integer or Long, but is a %s", i, value.getClass().getSimpleName());
                 }
@@ -258,6 +257,7 @@ public class InMemoryRecordSet
                 }
             }
             // Immutable list does not allow nulls
+            // noinspection Java9CollectionFactory
             records.add(Collections.unmodifiableList(new ArrayList<>(Arrays.asList(values))));
             return this;
         }
